# UO_bedrijf

./: Employee.ipynb  Order.ipynb  README.md  aenc.accdb  aenc.laccdb  pyproject.toml
Datawarehouse/: Customer.ipynb  Employee.ipynb  Order.ipynb  Product.ipynb  Quota.ipynb  SalesPerson.ipynb  ship.ipynb
MachineLearning/: ClassificatieModel.ipynb  CustomerSegmentation.ipynb  FrequentItems.ipynb  K-means.ipynb  LinearRegession.ipynb
Test/: OrderSCD.ipynb  shipSCD.ipynb
