[tool.poetry]
name = "uo-bedrijf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pyodbc = "^5.1.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
mlxtend = "^0.23.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
